--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*---------------Variabler---------------*/
 /*--------------Inheritances-------------*/
-/* line 18, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 18, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumouter, .forumreplyyellow, .forumreplygreen, .tabbar {
   -webkit-box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.16);
   -moz-box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.16);
@@ -39,24 +39,24 @@
   font-style: normal; }
 
 /* Using the fonts */
-/* line 89, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 89, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 html, body {
   font-family: 'Arla', Helvetica, Arial, sans-serif;
   font-size: 24px;
   color: #363E42; }
 
-/* line 95, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 95, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 * {
   padding: 0;
   margin: 0; }
 
-/* line 101, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 101, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 body {
   overflow-x: hidden;
   background-image: url(../images/milk-phone.png);
   background-size: cover; }
 
-/* line 107, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 107, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .page {
   display: none;
   /*min heigh is screen heigh minus height of tabbar */
@@ -73,7 +73,7 @@ body {
   to {
     opacity: 1; } }
 
-/* line 130, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 130, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .logowrapper {
   display: flex;
   justify-content: center;
@@ -81,13 +81,13 @@ body {
   flex-direction: column;
   margin-bottom: 20px; }
 
-/* line 137, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 137, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-icon {
   width: 70px;
   height: 70px;
   padding: 5px; }
 
-/* line 143, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 143, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .icon-border {
   background-color: #EBEBEC;
   padding: 5px;
@@ -97,9 +97,17 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 100px;
-  border: 6px solid #006C3A; }
+  border-width: 6px;
+  border-style: solid;
+  border-color: #006C3A; }
 
-/* line 156, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 157, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+#cow-border {
+  border-width: 6px;
+  border-style: solid;
+  border-color: #006C3A; }
+
+/* line 163, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .gold-border {
   background-color: #EBEBEC;
   padding: 5px;
@@ -109,7 +117,9 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 100px;
-  border: 6px solid #D4AF34; }
+  border-width: 6px;
+  border-style: solid;
+  border-color: #D4AF34; }
 
 /*
 .grid1{
@@ -132,78 +142,79 @@ body {
 
 }
 */
-/* line 190, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 200, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-test-wrapper {
   display: grid;
   grid-template-areas: 'grid1 grid2' 'grid3 grid3' 'grid4 grid5' 'grid6 grid6';
   justify-items: center; }
-  /* line 199, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 209, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-test-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 204, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 214, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-icon-wrapper {
+  margin-top: 15px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center; }
-  /* line 209, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 220, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-icon-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 215, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 226, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-solo {
   display: grid;
   justify-items: center;
   grid-column: 1/3; }
 
-/* line 221, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 232, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-header {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  /* line 225, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 236, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-header h1 {
     margin: 1vh 0px; }
 
-/* line 230, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 241, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .breakline {
   height: 4px;
   width: 40%;
   background-color: #363E42; }
 
-/* line 235, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 246, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-container {
   display: flex;
   justify-content: center;
   flex-direction: column; }
 
-/* line 241, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 252, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question {
   margin: 2vh 10%; }
-  /* line 243, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 254, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question p {
     text-align: end; }
-  /* line 246, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 257, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question span {
     font-weight: 600;
     text-align: start; }
 
-/* line 252, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 263, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .number-text {
   display: flex;
   justify-content: space-between; }
 
-/* line 256, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 267, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-input {
   display: flex;
   justify-content: flex-end;
   margin-top: 5px; }
-  /* line 260, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 271, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input p {
     color: #363E42; }
-  /* line 264, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 275, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input input {
     background-color: #D1D2CE;
     border: none;
@@ -211,23 +222,23 @@ body {
     margin-right: 3px;
     text-align: end;
     padding: 5px 5px; }
-  /* line 272, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 283, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input input:focus {
     border: 2px solid #7C8180; }
 
 /* --------> INFO SIDE STYLES <---------- */
-/* line 279, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 290, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #infodiv {
   display: flex; }
 
-/* line 283, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 294, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .arlalogoinfo {
   width: 40%;
   max-width: 200px;
   height: auto;
   margin-top: 15px; }
 
-/* line 289, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 300, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .underoverskrift {
   color: #363E42;
   font-weight: 700;
@@ -235,42 +246,42 @@ body {
   width: 160px;
   text-align: center; }
 
-/* line 296, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 307, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .infoinner {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column; }
 
-/* line 303, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 314, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 ul {
   list-style-position: inside;
   justify-content: center; }
 
-/* line 307, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 318, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 li {
   margin-left: 10px;
   display: list-item;
   line-height: 30px;
   margin-bottom: 20px; }
 
-/* line 314, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 325, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 h4 {
   font-size: 25px;
   margin: 20px 0 15px; }
 
-/* line 319, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 330, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .infolist {
   width: auto; }
 
 /* ----------> FORUM STYLES <---------- */
-/* line 324, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 335, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #forumdiv {
   display: flex;
   flex-direction: column;
   align-items: center; }
 
-/* line 332, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 343, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumouter {
   display: grid;
   justify-content: center;
@@ -283,15 +294,15 @@ h4 {
   background-color: white;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 25% 50% 25%; }
-  /* line 346, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 357, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter img {
     height: 70%;
     margin: 5px; }
-  /* line 351, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 362, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter p {
     font-size: 13px; }
 
-/* line 357, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 368, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .chatcow {
   display: grid;
   grid-row: 1/3;
@@ -302,14 +313,14 @@ h4 {
   border: 3px solid #D1D2CE;
   border-radius: 5px; }
 
-/* line 368, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 379, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumpost {
   display: grid;
   grid-row: 2/3;
   grid-column: 1/3;
   padding: 5px; }
 
-/* line 375, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 386, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .profilbillede {
   display: grid;
   grid-row: 1/2;
@@ -319,14 +330,14 @@ h4 {
   align-items: center;
   padding: 5px;
   padding-right: 0; }
-  /* line 384, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 395, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .profilbillede img {
     height: 70%;
     padding: 0;
     padding-right: 5px;
     margin: 0; }
 
-/* line 392, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 403, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .flag {
   display: grid;
   grid-row: 1/2;
@@ -335,38 +346,38 @@ h4 {
   justify-content: flex-end;
   align-items: center;
   padding: 5px; }
-  /* line 400, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 411, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .flag img {
     height: 70%;
     padding: 0;
     padding-left: 5px;
     margin: 0; }
 
-/* line 409, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 420, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 h5 {
   font-size: 17px; }
 
-/* line 413, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 424, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .svar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 5px; }
-  /* line 419, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 430, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .svar img {
     height: 100%;
     padding: 0;
     padding-right: 5px;
     margin: 0; }
 
-/* line 427, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 438, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .comment {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px; }
 
-/* line 434, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 445, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tid {
   display: flex;
   justify-content: flex-start;
@@ -374,17 +385,17 @@ h5 {
   padding: 5px; }
 
 /* ---------> Style Topic <--------- */
-/* line 443, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 454, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #forumtopicdiv {
   display: flex;
   flex-direction: column;
   align-items: center; }
 
-/* line 448, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 459, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #topicouter {
   margin-top: 20px; }
 
-/* line 452, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 463, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumreplyyellow {
   align-self: flex-end;
   display: grid;
@@ -397,15 +408,15 @@ h5 {
   margin-right: 2%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 30% 40% 30%; }
-  /* line 467, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 478, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplyyellow img {
     height: 70%;
     margin: 5px; }
-  /* line 472, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 483, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplyyellow p {
     font-size: 13px; }
 
-/* line 478, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 489, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumreplygreen {
   align-self: flex-start;
   display: grid;
@@ -418,21 +429,21 @@ h5 {
   margin-left: 2%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 30% 40% 30%; }
-  /* line 493, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 504, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplygreen img {
     height: 70%;
     margin: 5px; }
-  /* line 498, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 509, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplygreen p {
     font-size: 13px; }
 
-/* line 504, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 515, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumreplyyellow, .forumreplygreen {
   background-color: white; }
 
 /* -------> TABBAR <------ */
 /* styling af tabbar */
-/* line 511, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 522, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar {
   background-color: #D1D2CE;
   position: fixed;
@@ -442,42 +453,71 @@ h5 {
   z-index: 9999;
   display: flex;
   justify-content: center; }
-  /* line 522, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 533, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .tabbar img {
     height: 40px;
     width: auto; }
 
 /* Style på og omkring links i baren */
-/* line 529, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 540, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar a {
   display: inline-block;
   padding: 10px 26px; }
 
 /* style ved hover */
-/* line 536, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 547, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar a:hover {
   background-color: #D1D2CE; }
 
 /* style når en side er aktiv*/
-/* line 541, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+/* line 552, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar a.active {
   background-color: #D1D2CE; }
 
+/* line 557, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.cream-text {
+  display: none; }
+
 /* ---------> MEDIA Q <------- */
 @media screen and (min-width: 700px) {
-  /* line 550, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 567, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   body {
     background-image: url(../images/milk-laptop.png);
     background-size: cover;
     background-repeat: no-repeat; }
-  /* line 556, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 573, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .infolist {
     margin-top: px; }
-  /* line 562, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 579, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter p {
     font-size: 15px; }
-  /* line 568, ../../../../../Documents/GitHub/charts/Arla/scss/style.scss */
+  /* line 585, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .chatcow {
-    width: 92%; } }
+    width: 92%; }
+  /* line 590, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .cream-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 5vh 10%; }
+  /* line 597, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .grid-test-wrapper {
+    max-width: 850px; }
+  /* line 601, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .cream-text {
+    display: flex; }
+  /* line 605, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .question-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 700px; }
+  /* line 611, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .breakline {
+    max-width: 450px; }
+  /* line 614, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .media-question-container {
+    margin-top: 2vh;
+    display: flex;
+    justify-content: center; } }
 
 /*# sourceMappingURL=style.css.map */
