--- a/scss/style.scss
+++ b/scss/style.scss
@@ -441,10 +441,14 @@ h5{
 
 /* ---------> Style Topic <--------- */
 
+
 #forumtopicdiv{
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1000px;
+  margin: auto;
+  
 }
 #topicouter{
   margin-top: 20px;
@@ -504,6 +508,11 @@ p{
 
 .forumreplyyellow, .forumreplygreen{
   background-color: white;
+  max-width: 600px;
+
+}
+#curser{
+  cursor: pointer;
 }
 
 
@@ -519,6 +528,7 @@ p{
   @extend %shadow;
   display: flex;
   justify-content: center;
+  cursor: pointer;
 
   img {
     height: 55px;
@@ -575,5 +585,7 @@ p{
   .forumouter{
     height: auto;
   }
+
+  
 }
 
