--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,6 +114,13 @@ $gold: #D4AF34;
    padding-bottom: 65px;
 }
 
+#back-arrow{
+ margin-top: 30px;
+ margin-left: 30px;
+  img{
+    width: 30px;
+  }
+}
 
 /* ---------- animations ---------- */
 /* fade in */
