--- a/scss/style.scss
+++ b/scss/style.scss
@@ -204,6 +204,7 @@ $gold: #D4AF34;
 }
 */
 
+
 .grid-test-wrapper{
   display: grid;
   grid-template-areas: 
@@ -299,9 +300,9 @@ display: flex;
 }
 
 .arlalogoinfo{
-  width: 40%; max-width: 200px;
+  width: 40%; max-width: 160px;
   height: auto;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .underoverskrift{
@@ -539,7 +540,7 @@ p{
   justify-content: center;
 
   img {
-    height: 55px;
+    height: 45px;
     width: auto;
   }
 }
@@ -565,7 +566,111 @@ p{
 .cream-text {
   display: none;
 }
+.chart-container{
+  grid-area: lineChart;
+  width: 100%;
+  height: 100%;
+}
 
+.chart-grid-container{
+  margin: 10px;
+  margin-bottom: 50px;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-columns: 100%;
+  grid-template-areas: 
+  'lineChart' 
+  'toggle';
+}
+
+/* ---------- toggle switch styling  ---------- */
+.data-toggle{
+  max-width: 350px;
+  margin: 4px 0px;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: space-between;
+p{
+  font-size: 20px;
+}
+}
+
+.data-container{
+  grid-area: toggle;
+}
+
+.barChart-container{
+  margin: 0px 5%;
+  width: 90%;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 28px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $gray;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.slider {
+  background-color: $darkgreen;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px $darkgreen;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(22px);
+  -ms-transform: translateX(22px);
+  transform: translateX(22px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#chart{
+  h1{
+    text-align: center;
+  }
+}
 /* ---------> MEDIA Q <------- */
 
 @media screen and (min-width: 700px){
@@ -631,4 +736,18 @@ p{
     justify-content: center;
   }
 
+  .chart-grid-container{
+    margin-left: 15px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 65% 35%;
+    grid-template-areas: 
+    'lineChart toggle';
+  }
+
+  .barChart-container{
+  width: 60%;
+  margin: 0px 20%;
+  }
+  
 }
