--- a/css/style.css
+++ b/css/style.css
@@ -150,79 +150,79 @@ body {
 
 }
 */
-/* line 207, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 208, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-test-wrapper {
   display: grid;
   grid-template-areas: 'grid1 grid2' 'grid3 grid3' 'grid4 grid5' 'grid6 grid6';
   justify-items: center; }
-  /* line 216, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 217, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-test-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 221, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 222, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-icon-wrapper {
   margin-top: 15px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center; }
-  /* line 227, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 228, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-icon-wrapper a {
     color: #363E42;
     text-decoration: none; }
 
-/* line 233, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 234, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .grid-solo {
   display: grid;
   justify-items: center;
   grid-column: 1/3; }
 
-/* line 239, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 240, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-header {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  /* line 243, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 244, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-header h1 {
     margin: 1vh 0px; }
 
-/* line 248, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 249, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .breakline {
   height: 4px;
   width: 40%;
   background-color: #363E42; }
 
-/* line 253, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 254, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-container {
   display: flex;
   justify-content: center;
   flex-direction: column; }
 
-/* line 259, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 260, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question {
   margin: 2vh 10%; }
-  /* line 261, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 262, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question p {
     text-align: end; }
-  /* line 264, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 265, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question span {
     font-weight: 600;
     text-align: start; }
 
-/* line 270, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 271, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .number-text {
   display: flex;
   justify-content: space-between; }
 
-/* line 274, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 275, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .question-input {
   display: flex;
   justify-content: flex-end;
   margin-top: 5px; }
-  /* line 278, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 279, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input p {
     color: #363E42; }
-  /* line 282, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 283, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input input {
     background-color: #E4E4E4;
     border: none;
@@ -230,23 +230,23 @@ body {
     margin-right: 3px;
     text-align: end;
     padding: 5px 5px; }
-  /* line 290, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 291, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-input input:focus {
     border: 2px solid #7C8180; }
 
 /* --------> INFO SIDE STYLES <---------- */
-/* line 297, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 298, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #infodiv {
   display: flex; }
 
-/* line 301, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 302, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .arlalogoinfo {
   width: 40%;
-  max-width: 200px;
+  max-width: 160px;
   height: auto;
-  margin-top: 15px; }
+  margin-top: 10px; }
 
-/* line 307, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 308, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .underoverskrift {
   color: #363E42;
   font-weight: 700;
@@ -254,42 +254,42 @@ body {
   width: 160px;
   text-align: center; }
 
-/* line 314, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 315, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .infoinner {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column; }
 
-/* line 321, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 322, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 ul {
   list-style-position: inside;
   justify-content: center; }
 
-/* line 325, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 326, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 li {
   margin-left: 10px;
   display: list-item;
   line-height: 30px;
   margin-bottom: 20px; }
 
-/* line 332, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 333, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 h4 {
   font-size: 25px;
   margin: 20px 0 15px; }
 
-/* line 337, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 338, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .infolist {
   width: auto; }
 
 /* ----------> FORUM STYLES <---------- */
-/* line 342, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 343, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #forumdiv {
   display: flex;
   flex-direction: column;
   align-items: center; }
 
-/* line 350, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 351, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumouter {
   display: grid;
   justify-content: center;
@@ -302,16 +302,16 @@ h4 {
   background-color: white;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 25% 50% 25%; }
-  /* line 364, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 365, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter img {
     height: 70%;
     width: auto;
     margin: 5px; }
-  /* line 370, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 371, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter p {
     font-size: 13px; }
 
-/* line 376, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 377, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .chatcow {
   display: grid;
   grid-row: 1/3;
@@ -322,14 +322,14 @@ h4 {
   border: 3px solid #E4E4E4;
   border-radius: 5px; }
 
-/* line 387, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 388, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumpost {
   display: grid;
   grid-row: 2/3;
   grid-column: 1/3;
   padding: 5px; }
 
-/* line 394, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 395, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .profilbillede {
   display: grid;
   grid-row: 1/2;
@@ -339,14 +339,14 @@ h4 {
   align-items: center;
   padding: 5px;
   padding-right: 0; }
-  /* line 403, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 404, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .profilbillede img {
     height: 70%;
     padding: 0;
     padding-right: 5px;
     margin: 0; }
 
-/* line 411, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 412, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .flag {
   display: grid;
   grid-row: 1/2;
@@ -355,38 +355,38 @@ h4 {
   justify-content: flex-end;
   align-items: center;
   padding: 5px; }
-  /* line 419, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 420, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .flag img {
     height: 70%;
     padding: 0;
     padding-left: 5px;
     margin: 0; }
 
-/* line 428, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 429, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 h5 {
   font-size: 17px; }
 
-/* line 432, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 433, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .svar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 5px; }
-  /* line 438, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 439, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .svar img {
     height: 100%;
     padding: 0;
     padding-right: 5px;
     margin: 0; }
 
-/* line 446, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 447, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .comment {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px; }
 
-/* line 453, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 454, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tid {
   display: flex;
   justify-content: flex-start;
@@ -394,17 +394,17 @@ h5 {
   padding: 5px; }
 
 /* ---------> Style Topic <--------- */
-/* line 462, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 463, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #forumtopicdiv {
   display: flex;
   flex-direction: column;
   align-items: center; }
 
-/* line 467, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 468, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 #topicouter {
   margin-top: 20px; }
 
-/* line 471, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 472, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumreplyyellow {
   align-self: flex-end;
   display: grid;
@@ -417,15 +417,15 @@ h5 {
   margin-right: 2%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 30% 40% 30%; }
-  /* line 486, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 487, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplyyellow img {
     height: 70%;
     margin: 5px; }
-  /* line 491, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 492, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplyyellow p {
     font-size: 13px; }
 
-/* line 497, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 498, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumreplygreen {
   align-self: flex-start;
   display: grid;
@@ -438,21 +438,21 @@ h5 {
   margin-left: 2%;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 30% 40% 30%; }
-  /* line 512, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 513, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplygreen img {
     height: 70%;
     margin: 5px; }
-  /* line 517, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 518, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumreplygreen p {
     font-size: 13px; }
 
-/* line 523, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 524, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .forumreplyyellow, .forumreplygreen {
   background-color: white; }
 
 /* -------> TABBAR <------ */
 /* styling af tabbar */
-/* line 530, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 531, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar {
   background-color: #E4E4E4;
   position: fixed;
@@ -462,75 +462,188 @@ h5 {
   z-index: 9999;
   display: flex;
   justify-content: center; }
-  /* line 541, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 542, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .tabbar img {
-    height: 55px;
+    height: 45px;
     width: auto; }
 
 /* Style på og omkring links i baren */
-/* line 548, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 549, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar a {
   display: inline-block;
   padding: 10px 26px; }
 
 /* style ved hover */
-/* line 555, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 556, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar a:hover {
   background-color: #363E42; }
 
 /* style når en side er aktiv*/
-/* line 560, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 561, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .tabbar a.active {
   background-color: #363E42; }
 
-/* line 565, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+/* line 566, ../../../../../Documents/GitHub/Arla/scss/style.scss */
 .cream-text {
   display: none; }
 
+/* line 569, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.chart-container {
+  grid-area: lineChart;
+  width: 100%;
+  height: 100%; }
+
+/* line 575, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.chart-grid-container {
+  margin: 10px;
+  margin-bottom: 50px;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-columns: 100%;
+  grid-template-areas: 'lineChart'  'toggle'; }
+
+/* ---------- toggle switch styling  ---------- */
+/* line 588, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.data-toggle {
+  max-width: 350px;
+  margin: 4px 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between; }
+  /* line 595, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .data-toggle p {
+    font-size: 20px; }
+
+/* line 600, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.data-container {
+  grid-area: toggle; }
+
+/* line 604, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.barChart-container {
+  margin: 0px 5%;
+  width: 90%; }
+
+/* line 609, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 28px; }
+
+/* line 616, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+/* line 622, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #7C8180;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+/* line 634, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+/* line 646, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+input:checked + .slider {
+  background-color: #006C3A; }
+
+/* line 650, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+input:focus + .slider {
+  box-shadow: 0 0 1px #006C3A; }
+
+/* line 654, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+input:checked + .slider:before {
+  -webkit-transform: translateX(22px);
+  -ms-transform: translateX(22px);
+  transform: translateX(22px); }
+
+/* Rounded sliders */
+/* line 661, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.slider.round {
+  border-radius: 34px; }
+
+/* line 665, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+.slider.round:before {
+  border-radius: 50%; }
+
+/* line 670, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+#chart h1 {
+  text-align: center; }
+
 /* ---------> MEDIA Q <------- */
 @media screen and (min-width: 700px) {
-  /* line 575, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 680, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   body {
     background-image: url(../images/milk-laptop.png);
     background-size: cover;
     background-repeat: no-repeat; }
-  /* line 581, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 686, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .infolist {
     margin-top: 80px; }
-  /* line 587, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 692, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter p {
     font-size: 17px; }
-  /* line 593, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 698, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   #chatcow2, #chatcow1, #chatcow3 {
     height: auto;
     width: 92%; }
-  /* line 599, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 704, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .forumouter {
     height: auto; }
-  /* line 604, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 709, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .cream-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 5vh 10%; }
-  /* line 611, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 716, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .grid-test-wrapper {
     max-width: 850px; }
-  /* line 615, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 720, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .cream-text {
     display: flex; }
-  /* line 619, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 724, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .question-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
     max-width: 700px; }
-  /* line 625, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 730, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .breakline {
     max-width: 450px; }
-  /* line 628, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  /* line 733, ../../../../../Documents/GitHub/Arla/scss/style.scss */
   .media-question-container {
     margin-top: 2vh;
     display: flex;
-    justify-content: center; } }
+    justify-content: center; }
+  /* line 739, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .chart-grid-container {
+    margin-left: 15px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 65% 35%;
+    grid-template-areas: 'lineChart toggle'; }
+  /* line 748, ../../../../../Documents/GitHub/Arla/scss/style.scss */
+  .barChart-container {
+    width: 60%;
+    margin: 0px 20%; } }
 
 /*# sourceMappingURL=style.css.map */
