--- a/scss/style.scss
+++ b/scss/style.scss
@@ -640,7 +640,9 @@ p{
   width: 96%;
   margin-bottom: 30vh;
 }
-
+#barChart{
+  background-color: white;
+}
 .switch {
   position: relative;
   display: inline-block;
